...
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <EditText
                        android:id="@+id/etUsername"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:background="@android:color/transparent"
                        android:hint="Enter username"
                        android:textColor="@color/text"
                        android:textColorHint="@color/uneditable"
...
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <EditText
                        android:id="@+id/etFirstName"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:background="@android:color/transparent"
                        android:hint="Enter first name"
                        android:textColor="@color/text"
                        android:textColorHint="@color/uneditable"
...
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <EditText
                        android:id="@+id/etLastName"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:background="@android:color/transparent"
                        android:hint="Enter last name"
                        android:textColor="@color/text"
                        android:textColorHint="@color/uneditable"
...
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <EditText
                        android:id="@+id/etCellNumber"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:background="@android:color/transparent"
                        android:hint="Enter cell number"
                        android:inputType="phone"
                        android:textColor="@color/text"
...
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <EditText
                        android:id="@+id/etEmail"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:background="@android:color/transparent"
                        android:hint="Enter email"
                        android:inputType="textEmailAddress"
                        android:textColor="@color/text"
...
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <EditText
                        android:id="@+id/etPhoneNumber"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:background="@android:color/transparent"
                        android:hint="Enter phone number"
                        android:inputType="phone"
                        android:textColor="@color/text"
...
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <EditText
                        android:id="@+id/etAddress"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:background="@android:color/transparent"
                        android:hint="Enter address"
                        android:textColor="@color/text"
                        android:textColorHint="@color/uneditable"
...
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tvAccountCreated"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:gravity="center_vertical"
                        android:text="2025-06-25 15:55:29"
                        android:textColor="@color/uneditable"
                        android:textColorHint="@color/uneditable"
                        android:textSize="16sp"
                        android:enabled="false"
                        android:fontFamily="@font/poppinsregular"
                        android:letterSpacing="0.05"/>
...
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="24dp">


        <Button
            android:id="@+id/btnSaveChanges"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="Save Changes"
            android:backgroundTint="#B8ED55"
            android:textColor="#000000"
            android:textStyle="bold"
...
