...

                    <TextView
                        android:id="@+id/tvUsername"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:gravity="center_vertical"
                        android:text="Cherika.User"
                        android:textSize="16sp"
                        android:textColor="@color/text"
                        android:textColorHint="@color/uneditable"
                        android:fontFamily="@font/poppinsregular"
                        android:letterSpacing="0.05"/>

...

                    <TextView
                        android:id="@+id/tvFirstName"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:gravity="center_vertical"
                        android:text="Cherika"
                        android:textSize="16sp"
                        android:textColor="@color/text"
                        android:textColorHint="@color/uneditable"
                        android:fontFamily="@font/poppinsregular"
                        android:letterSpacing="0.05"/>

...

                    <TextView
                        android:id="@+id/tvLastName"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:gravity="center_vertical"
                        android:text="Bodde"
                        android:paddingBottom="8dp"
                        android:textSize="16sp"
                        android:textColor="@color/text"
                        android:textColorHint="@color/uneditable"
                        android:fontFamily="@font/poppinsregular"
                        android:letterSpacing="0.05"/>
...

                    <TextView
                        android:id="@+id/tvCellNumber"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:gravity="center_vertical"
                        android:text="082 000 0000"
                        android:paddingBottom="8dp"
                        android:textSize="16sp"
                        android:textColor="@color/text"
                        android:textColorHint="@color/uneditable"
                        android:fontFamily="@font/poppinsregular"
                        android:letterSpacing="0.05"/>
...

                    <TextView
                        android:id="@+id/tvEmail"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:gravity="center_vertical"
                        android:text="cherika.bodde@co.za"
                        android:textSize="16sp"
                        android:textColor="@color/text"
                        android:textColorHint="@color/uneditable"
                        android:fontFamily="@font/poppinsregular"
                        android:letterSpacing="0.05"/>

...

                    <TextView
                        android:id="@+id/tvPhoneNumber"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:gravity="center_vertical"
                        android:text="011 000 0000"
                        android:textSize="16sp"
                        android:textColor="@color/text"
                        android:textColorHint="@color/uneditable"
                        android:fontFamily="@font/poppinsregular"
                        android:letterSpacing="0.05" />

...

                    <TextView
                        android:id="@+id/tvAddress"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:gravity="center_vertical"
                        android:text="Pam Straat 617"
                        android:textSize="16sp"
                        android:textColor="@color/text"
                        android:textColorHint="@color/uneditable"
                        android:fontFamily="@font/poppinsregular"
                        android:letterSpacing="0.05" />

...
